# trading-strategy-optimizer

./: CMakeLists.txt  README.md
include/: backtester.h  indicators.h  models.h  optimizers.h
src/: indicators.cpp  main.cpp  models.cpp
